add area and height for the attic, fix fields

--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -266,7 +266,9 @@
       "foundation": "фундамент",
       "ceilings": "перекрытия",
       "roof": "кровля",
-      "construction_price": "цена строительства"
+      "construction_price": "цена строительства",
+      "attic_height": "высота мансарды",
+      "attic_area": "площадь мансарды"
     },
     "composition": {
       "title": "Состав проекта",
